--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "doctrine/doctrine-fixtures-bundle": "2.2.*",
         "fzaninotto/faker": "1.5.*@dev",
         "knplabs/knp-paginator-bundle": "~2.4",
-        "javiereguiluz/easyadmin-bundle": "~1.2",
+        "javiereguiluz/easyadmin-bundle": "~1.2@dev",
         "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
